projects/acquacchi/css/acquacchi.css
* { box-sizing: border-box; border: 0; font-size: 100%; font: inherit; vertical-align: baseline; margin: 0; padding: 0;}
body {
  position: absolute;
  width: 100%;
  height: 100%;
  background-color: #f0f0f0;
  font-family: Courier, monospace;
  font-style: normal;
  font-weight: 100;
  color: #202020;
}
.lg-container {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    text-align: center;
  }
.container {
  position: relative;
  margin: 0 auto;
  width: 50em;
  max-width: 100%;
  height: 10em;
  text-align: center;
}
a { 
  text-decoration: none;
  color: inherit;
}
h1 {
  font-size: 3em;
  text-align: left;
}
h2 {
  font-size: 2em;
  text-align: left;
}
.pages {
  position: relative;
  width: 100%;
  margin: 0em 0em 1.5em auto;
  padding-right: 1.5em;
  text-align: right;
  background-color: #f27657;
  box-shadow: 0 0 5px rgb(138, 72, 72);
}
.sidenav-title {
  margin-top: 20px;
  margin-bottom: 8px;
}

#myBoard {
  width: 80%;
  float: left;
}

#board-container {
  margin-top: 1.5em;
  margin-bottom: 0.5em;
  overflow: auto;
}

.texter {
  width: 20%;
  float: left;
  padding-left: 0.5em;
  text-align: left;
}

#moves-container {
  float: left;
}

.pages a {
    display: inline-block;
    overflow: hidden;
    opacity: 1;
    line-height: 2em;
    margin: 0.7em;
    color: #f0f0f0;
    font-size: 1.5em;
}

.contact {
  position: relative;
  width: 20em;
  max-width: 100%;
  margin: -1em auto 1.5em auto;
}

.contact a {
  display: inline-block;
  overflow: hidden;
  opacity: 1;
  width: 2em;
  line-height: 2em;
  margin: 0 .20em;
  color: #f0f0f0;
  font-size: 1.5em;
  transition: background-color .2s ease-in-out;
  border-radius: 50%;
}

.contact a:hover { color: rgb(92, 92, 92); }

.pages a:hover { color: rgb(92, 92, 92); }

canvas {
  display: block;
  width: 100vw;
  height: 100vh;
}

p {
  text-align: left;
}

br {
  display: block;
  content: "";
  border-bottom: 10px solid transparent;
}
@-moz-document url-prefix() {
  br {
    margin-bottom: 10px;
  }
}

.disabled_a { 
  color: rgb(92, 92, 92) !important;
  pointer-events: none;
  cursor: default;
}

img {
  object-fit: cover;
  width: 100%;
  /* float: right;
  margin-bottom: 5px; */
}

.projects {
  margin-top: 1em;
  margin-bottom: 2em;
}

.project-links {
  text-align: left;
  margin-bottom: 10px;
}

#typer {
  margin: 10px 8px 0px 0px;
}

.vis_link {
  color: #c44525 !important;
  text-decoration: underline !important;
}

/* The side navigation menu */
.sidenav {
  height: 100%; /* 100% Full-height */
  width: 0; /* 0 width - change this with JavaScript */
  position: fixed; /* Stay in place */
  z-index: 1; /* Stay on top */
  top: 0; /* Stay at the top */
  left: 0;
  background-color: rgb(219, 219, 219); /* Black*/
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 20px; /* Place content 60px from the top */
  transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
  box-shadow: 0 0 5px rgb(90, 90, 90);
}

/* The navigation menu links */
.sidenav a {
  text-decoration: none;
  color: var(--main-color);
}

.sidenav h1, .sidenav p {
  text-align: left;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
  color: #f1f1f1;
  transition: 0.3s;
}

/* Position and style the close button (top right corner) */
.sidenav .closebtn {
  position: absolute;
  top: 0;
  right: 25px;
  font-size: 36px;
  margin-left: 50px;
}

.new_game_btn {
  background-color: var(--main-color) !important;
  color: white;
  padding: 5px;
  margin: 15px;
} 

